--- a/css/global.css
+++ b/css/global.css
@@ -11,7 +11,7 @@
 
     /* TEXT */
     --text-primary:#292524;
-    --text-secndary:#57534E;
+    --text-secondary:#57534E;
     --text-terniary:#8F8881;
     --text-highlight:#E43A12;
 
@@ -26,13 +26,16 @@
 
     /* FONT  */
     --font-family:"Poppins", sans-serif;
-    --heading1:bold 32px/120% var(--font-family);
-    --heading2:bold 24px/120% var(--font-family);
-    --heading3:bold 20px/120% var(--font-family);
+    --heading1:bold 40px/120% var(--font-family);
+    --heading2:700 24px/125% var(--font-family);
+    --heading3:400 16px/150% var(--font-family);
     --heading4:bold 16px/120% var(--font-family);
 }
 body{
-    margin: 64px;
-    overflow:hidden;
-   
+   overflow: hidden; 
+   font-family: var(--font-family);
+
+}
+h1 ,h2{
+    color: var(--text-primary);
 }
