--- a/css/layout.css
+++ b/css/layout.css
@@ -11,6 +11,7 @@ main{
     & .main-container{
         max-width: 33rem;
         margin-left: auto;
+        margin-right: auto;
     }
     
     & .back{
