--- a/css/forms.css/form.css
+++ b/css/forms.css/form.css
@@ -1,4 +1,5 @@
 @import url(../forms.css/info-children.css);
+
 fieldset{
     border: none;
 
@@ -19,8 +20,10 @@ label{
     color: var(--text-secondary);
 }
 input{
-    &[disable]{
-        background-color: var(--stroke-default);
+    &[disabled]{
+        background-color: var(--surface-disabled);
+        color: var(--text-secondary);
+        border:var(--stroke-default) solid 1px;
     }
     &:invalid{
         border: 2px solid #DC2626;
@@ -34,18 +37,33 @@ input{
         margin-bottom:24px;
         transform: translateY(-100%);
      }
+     
     }
     
-span {
-     
-       gap: .25rem;
-
-       font: 400 14px/140% var(--font-family);
-       color: #DC2626;
-       margin-top: .25rem;
-
-      
+    input, textarea,select{
+        appearance: none;
+    
+        width: 100%;
+        height: 3rem;
+    
+        border-radius: 0.5rem;
+        border: 1px solid var(--surface-disabled);
+    
+        padding: 12px 1rem;
+        
+        
+    
+        font:var(--heading3);
+    
     }
+    
+    
+    input:focus, textarea:focus, select:focus{
+        outline: 4px solid var( --surface-secondary);
+        border: 2px solid var(--stroke-highlight);
+    }   
+    
+
 
    
     
