--- a/css/layout.css
+++ b/css/layout.css
@@ -3,6 +3,10 @@
     display: grid;
     grid-template-columns: 51.25% 48.75%;
     height: 100vh;
+
+        & aside{
+            overflow:none;
+        }
 }
 main{
     padding: 4rem;
