--- a/css/forms.css/form.css
+++ b/css/forms.css/form.css
@@ -33,7 +33,7 @@ input{
         display: flex;
         font: 400 14px/140% var(--font-family);
         color: #78716C;
-        margin-top: 0;
+        margin-top: auto;
         margin-bottom:24px;
         transform: translateY(-100%);
      }
